remove module stuff, put in cluster placeholder

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -5,11 +5,12 @@
 -%>
 ---
 cluster:
-  - "owens"
-  - "pitzer"
-  - "kubernetes"
-  - "kubernetes-test"
-  - "kubernetes-dev"
+  - "CLUSTER_NAME_PLACEHOLDER"
+  # - "owens"
+  # - "pitzer"
+  # - "kubernetes"
+  # - "kubernetes-test"
+  # - "kubernetes-dev"
 form:
   - version
   - account
