--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -11,7 +11,7 @@ host="$HOST_CFG"
 port="$PORT_CFG"
 export SINGULARITY_HOME="$HOME"
 <% else -%>
-[[ $(type -t module) == "function" ]] && export -f module
+# [[ $(type -t module) == "function" ]] && export -f module
 
 # Find available port to run server on
 port=$(find_port ${host})
